﻿- Add support for snowplows
- Fix button on cemetaries being partially covered by an invisible background panel